# holmes

./: Cargo.toml  Makefile  README.md  build-cuda7.rs  build-cuda7_5.rs  default.hyperparam  gtp_ref_ctrl-holmes-vs-pachi10k-with-gnugo.sh  gtpctl-gnugo-vs-fuego.sh  gtpctl-gnugo-vs-gnugo.sh  gtpctl-holmes-vs-gnugo.sh  kgs.conf
conf/: fuego_100k.conf  fuego_100k_4t.conf  fuego_10k.conf  fuego_10k_4t.conf  fuego_3k.conf
experiments/: benchmarks.txt  gogodb_19x19x16.v2.data  gogodb_19x19x16_episode.v2.data  gogodb_19x19x4.v2.data  gogodb_actionvalue_19x19x16.v2.data  results.txt
libstatistics_avx2/: COPYING  Cargo.toml  LICENSE  build.rs
libstatistics_avx2/src/: array.rs  lib.rs  random.rs
libstatistics_avx2/src/c/: array.c  avx_mathfun.h  xorshift.c  xorshift128p.c
libstatistics_avx2/src/c/cephes/: logf.c  mconf.h  mtherr.c  sinf.c  sqrtf.c
libstatistics_avx2/tools/: bench.rs
src/: agent.rs  array_util.rs  board.rs  book.rs  client.rs  convnet.rs  convnet_new.rs  data.rs  fastboard.rs  fasttree.rs  features.rs  fix.rs  game.rs  gtp.rs  gtp_board.rs  gtp_client.rs  gtp_ctrl.rs  hyper.rs  lib.rs  mctree.rs  pattern.rs  policy.rs  random.rs  search.rs  search_fasttree.rs  search_tree.rs  sgf.rs  stats.rs  table.rs  tree.rs  txnboard.rs  txnstate.rs  util.rs  worker.rs
src/agents/: convnet.rs  convnet_new.rs  manual.rs  mod.rs  parallel_search.rs  search.rs
src/client/: mod.rs  nngs.rs
src/client/agent/: mod.rs  parallel_search.rs
src/contains/: hash.rs  hash_map.rs  mod.rs
src/convnet/: arch.rs  data.rs  mod.rs  opt.rs
src/discrete/: bfilter.rs  mod.rs
src/pg/: autoplay.rs  balance.rs  balance2.rs  eval.rs  magic.rs  mod.rs
src/policygrad/: convnet.rs  mod.rs
src/search/: minimax.rs  mod.rs  parallel_tree.rs  tree.rs
src/search/parallel_policies/: convnet.rs  mod.rs  pattern.rs  thompson.rs
src/search/parallel_trace/: magic.rs  mod.rs  omega.rs
src/search/policies/: convnet.rs  local_uniform.rs  mod.rs  quasiuniform.rs  thompson_rave.rs  uct_rave.rs
src/search_policies/: convnet.rs  mod.rs  quasiuniform.rs  uct_rave.rs
src/txnstate/: extras.rs  features.rs  mod.rs  sparse.rs
tests/: bfilter.rs  omega.rs  sgf.rs  statistics.rs  txnstate.rs
tools/: bench-board.rs  bench-discrete.rs  bench-net.rs  bench-tree.rs  bench-ttboard.rs  bench-txnstate.rs  compare-arraydb.rs  extract-gogod-data.rs  extract-gogod-episodes.rs  filter-gogod-data.rs  filter-kgs-data.rs  gen-pattern-maps.rs  gtp_ref_ctrl.rs  gtp_ref_ctrl_nopass.rs  gtpctl.rs  holmes-convnet-gtp.rs  holmes-convnet-vs-pachi10k_f1-f16.rs  holmes-gtp.rs  holmes-nngs.rs  holmes-search-gtp.rs  holmes-search-vs-pachi10k_f1-f16.rs  holmes-vs-pachi10k_f1-f16.rs  manual-gtp.rs  measure-holmes-vs-gnugo.rs  measure-holmes-vs-pachi.rs  new-train-12layer128-19x19x16.rs  new-train-12layer256-19x19x37.rs  new-train-12layer384-19x19x16.rs  new-train-12layer384-19x19x28.rs  new-train-12layer384-19x19x37.rs  new-train-12layer384-19x19x44.rs  new-train-13layer384-19x19x32.rs  new-train-13layer384multi3-19x19x32.rs  new-train-1layer-19x19x8.rs  new-train-1layer16-19x19x16.rs  new-train-1layer5x5-19x19x8.rs  new-train-2layer16-19x19x16.rs  new-train-2layer16-19x19x44.rs  new-train-2layer3x3-19x19x7.rs  new-train-2layer3x3-19x19x8.rs  (+35 more)
