[package]
name = "holmes"
version = "0.2.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "holmes"
path = "src/lib.rs"

[[bin]]
name = "gtpctl"
path = "tools/gtpctl.rs"

[[bin]]
name = "gtp_ref_ctrl"
path = "tools/gtp_ref_ctrl.rs"

[[bin]]
name = "gen-pattern-maps"
path = "tools/gen-pattern-maps.rs"

[[bin]]
name = "prepare-position-testsuite-data"
path = "tools/prepare-position-testsuite-data.rs"

[[bin]]
name = "prepare-position-testsuite-data-p2"
path = "tools/prepare-position-testsuite-data-p2.rs"

[[bin]]
name = "extract-gogod-data"
path = "tools/extract-gogod-data.rs"

[[bin]]
name = "extract-gogod-episodes"
path = "tools/extract-gogod-episodes.rs"

[[bin]]
name = "measure-holmes-vs-gnugo"
path = "tools/measure-holmes-vs-gnugo.rs"

[[bin]]
name = "measure-holmes-vs-pachi"
path = "tools/measure-holmes-vs-pachi.rs"

#[[bin]]
#name = "train-mimic-19x19x4"
#path = "tools/train-mimic-19x19x4.rs"

[[bin]]
name = "train-1layer-19x19x4"
path = "tools/train-1layer-19x19x4.rs"

[[bin]]
name = "train-shallow-19x19x4"
path = "tools/train-shallow-19x19x4.rs"

[[bin]]
name = "train-3layer-19x19x4"
path = "tools/train-3layer-19x19x4.rs"

[[bin]]
name = "train-2layer-19x19x16"
path = "tools/train-2layer-19x19x16.rs"

[[bin]]
name = "train-narrow-3layer-19x19x16"
path = "tools/train-narrow-3layer-19x19x16.rs"

[[bin]]
name = "train-3layer-19x19x16"
path = "tools/train-3layer-19x19x16.rs"

[[bin]]
name = "train-6layer-19x19x16"
path = "tools/train-6layer-19x19x16.rs"

[[bin]]
name = "train-12layer-19x19x16"
path = "tools/train-12layer-19x19x16.rs"

[[bin]]
name = "train-action3-12layer-19x19x16"
path = "tools/train-action3-12layer-19x19x16.rs"

[[bin]]
name = "bench-discrete"
path = "tools/bench-discrete.rs"

[[bin]]
name = "bench-txnstate"
path = "tools/bench-txnstate.rs"

[[bin]]
name = "test-book"
path = "tools/test-book.rs"

[[bin]]
name = "test-sgf"
path = "tools/test-sgf.rs"

#[[bin]]
#name = "bench-board"
#path = "tools/bench-board.rs"

#[[bin]]
#name = "bench-tree"
#path = "tools/bench-tree.rs"

[[bin]]
name = "bench-net"
path = "tools/bench-net.rs"

[[bin]]
name = "compare-arraydb"
path = "tools/compare-arraydb.rs"

[[bin]]
name = "filter-gogod-data"
path = "tools/filter-gogod-data.rs"

[[bin]]
name = "filter-kgs-data"
path = "tools/filter-kgs-data.rs"

[[bin]]
name = "preproc-gogod-data"
path = "tools/preproc-gogod-data.rs"

[[bin]]
name = "train-simba-19x19x4"
path = "tools/train-simba-19x19x4.rs"

[[bin]]
name = "train-simba-19x19x10"
path = "tools/train-simba-19x19x10.rs"

[[bin]]
name = "train-move"
path = "tools/train-move.rs"

[[bin]]
name = "holmes-gtp"
path = "tools/holmes-gtp.rs"

[dependencies]
bit-set = "*"
bit-vec = "*"
bufstream = "*"
byteorder = "*"
docopt = "*"
getopts = "*"
libc = "*"
rand = "*"
rusqlite = "=0.4.0"
rustc-serialize = "*"
threadpool = "*"
time = "*"
toml = "*"
vec_map = "*"

[dependencies.array]
#path = "../../rembrandt-project/libarray"
path = "../rembrandt-project/libarray"

[dependencies.arraydb]
#path = "../../rembrandt-project/arraydb"
path = "../rembrandt-project/arraydb"

[dependencies.async]
#path = "../../rembrandt-project/libasync"
path = "../rembrandt-project/libasync"

[dependencies.async_cuda]
#path = "../../rembrandt-project/libasync_cuda"
path = "../rembrandt-project/libasync_cuda"

[dependencies.episodb]
path = "../episodb"

[dependencies.rembrandt]
#path = "../../rembrandt-project/rembrandt_new"
path = "../rembrandt-project/rembrandt_new"

[dependencies.statistics_avx2]
path = "libstatistics_avx2"
