[package]
name = "holmes"
version = "0.2.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
#build = "build-cuda7.rs"
#build = "build-cuda7_5.rs"

[lib]
name = "holmes"
path = "src/lib.rs"

[[bin]]
name = "gtpctl"
path = "tools/gtpctl.rs"

[[bin]]
name = "gtp_ref_ctrl"
path = "tools/gtp_ref_ctrl.rs"

[[bin]]
name = "gtp_ref_ctrl_nopass"
path = "tools/gtp_ref_ctrl_nopass.rs"

#[[bin]]
#name = "gen-pattern-maps"
#path = "tools/gen-pattern-maps.rs"

[[bin]]
name = "prepare-position-testsuite-data"
path = "tools/prepare-position-testsuite-data.rs"

[[bin]]
name = "prepare-position-testsuite-data-p2"
path = "tools/prepare-position-testsuite-data-p2.rs"

[[bin]]
name = "extract-gogod-data"
path = "tools/extract-gogod-data.rs"

[[bin]]
name = "extract-gogod-episodes"
path = "tools/extract-gogod-episodes.rs"

[[bin]]
name = "measure-holmes-vs-gnugo"
path = "tools/measure-holmes-vs-gnugo.rs"

[[bin]]
name = "measure-holmes-vs-pachi"
path = "tools/measure-holmes-vs-pachi.rs"

#[[bin]]
#name = "train-mimic-19x19x4"
#path = "tools/train-mimic-19x19x4.rs"

#[[bin]]
#name = "train-1layer-19x19x4"
#path = "tools/train-1layer-19x19x4.rs"

#[[bin]]
#name = "train-shallow-19x19x4"
#path = "tools/train-shallow-19x19x4.rs"

#[[bin]]
#name = "train-3layer-19x19x4"
#path = "tools/train-3layer-19x19x4.rs"

[[bin]]
name = "train-2layer-19x19x16"
path = "tools/train-2layer-19x19x16.rs"

[[bin]]
name = "train-narrow-3layer-19x19x16"
path = "tools/train-narrow-3layer-19x19x16.rs"

#[[bin]]
#name = "train-3layer-19x19x16"
#path = "tools/train-3layer-19x19x16.rs"

#[[bin]]
#name = "train-6layer-19x19x16"
#path = "tools/train-6layer-19x19x16.rs"

[[bin]]
name = "train-12layer-19x19x16"
path = "tools/train-12layer-19x19x16.rs"

[[bin]]
name = "train-12layer384-19x19x16"
path = "tools/train-12layer384-19x19x16.rs"

[[bin]]
name = "new-train-12layer128-19x19x16"
path = "tools/new-train-12layer128-19x19x16.rs"

[[bin]]
name = "new-train-12layer384-19x19x16"
path = "tools/new-train-12layer384-19x19x16.rs"

[[bin]]
name = "new-train-12layer384-19x19x28"
path = "tools/new-train-12layer384-19x19x28.rs"

[[bin]]
name = "new-train-12layer256-19x19x37"
path = "tools/new-train-12layer256-19x19x37.rs"

[[bin]]
name = "new-train-12layer384-19x19x37"
path = "tools/new-train-12layer384-19x19x37.rs"

[[bin]]
name = "new-train-2layer16-19x19x44"
path = "tools/new-train-2layer16-19x19x44.rs"

[[bin]]
name = "new-train-3layer32-19x19x44"
path = "tools/new-train-3layer32-19x19x44.rs"

[[bin]]
name = "new-train-12layer384-19x19x44"
path = "tools/new-train-12layer384-19x19x44.rs"

[[bin]]
name = "policygrad-balance"
path = "tools/policygrad-balance.rs"

[[bin]]
name = "policygrad-evalout"
path = "tools/policygrad-evalout.rs"

[[bin]]
name = "policygrad-autoplay"
path = "tools/policygrad-autoplay.rs"

[[bin]]
name = "holmes-vs-pachi10k_f1-f16"
path = "tools/holmes-vs-pachi10k_f1-f16.rs"

[[bin]]
name = "holmes-convnet-vs-pachi10k_f1-f16"
path = "tools/holmes-convnet-vs-pachi10k_f1-f16.rs"

[[bin]]
name = "holmes-search-vs-pachi10k_f1-f16"
path = "tools/holmes-search-vs-pachi10k_f1-f16.rs"

[[bin]]
name = "train-action3-narrow-3layer-19x19x16"
path = "tools/train-action3-narrow-3layer-19x19x16.rs"

[[bin]]
name = "train-action3-3layer-19x19x16"
path = "tools/train-action3-3layer-19x19x16.rs"

[[bin]]
name = "train-action3-12layer-19x19x16"
path = "tools/train-action3-12layer-19x19x16.rs"

[[bin]]
name = "train-action3-12layer-19x19x30"
path = "tools/train-action3-12layer-19x19x30.rs"

[[bin]]
name = "bench-discrete"
path = "tools/bench-discrete.rs"

[[bin]]
name = "bench-txnstate"
path = "tools/bench-txnstate.rs"

#[[bin]]
#name = "test-book"
#path = "tools/test-book.rs"

#[[bin]]
#name = "test-sgf"
#path = "tools/test-sgf.rs"

#[[bin]]
#name = "bench-board"
#path = "tools/bench-board.rs"

#[[bin]]
#name = "bench-tree"
#path = "tools/bench-tree.rs"

#[[bin]]
#name = "bench-net"
#path = "tools/bench-net.rs"

#[[bin]]
#name = "compare-arraydb"
#path = "tools/compare-arraydb.rs"

[[bin]]
name = "filter-gogod-data"
path = "tools/filter-gogod-data.rs"

[[bin]]
name = "filter-kgs-data"
path = "tools/filter-kgs-data.rs"

#[[bin]]
#name = "preproc-gogod-data"
#path = "tools/preproc-gogod-data.rs"

#[[bin]]
#name = "train-simba-19x19x4"
#path = "tools/train-simba-19x19x4.rs"

#[[bin]]
#name = "train-simba-19x19x10"
#path = "tools/train-simba-19x19x10.rs"

#[[bin]]
#name = "train-move"
#path = "tools/train-move.rs"

[[bin]]
name = "manual-gtp"
path = "tools/manual-gtp.rs"

#[[bin]]
#name = "holmes-gtp"
#path = "tools/holmes-gtp.rs"

[[bin]]
name = "holmes-convnet-gtp"
path = "tools/holmes-convnet-gtp.rs"

[[bin]]
name = "holmes-search-gtp"
path = "tools/holmes-search-gtp.rs"

[dependencies]
bit-set = "*"
bit-vec = "*"
bufstream = "*"
byteorder = "*"
docopt = "*"
env_logger = "*"
float = "*"
getopts = "*"
libc = "*"
log = "*"
rand = "*"
rusqlite = "=0.4.0"
rustc-serialize = "*"
scoped_threadpool = "*"
threadpool = "*"
time = "*"
toml = "*"
vec_map = "*"

array = { path = "../rembrandt-project/libarray" }
async = { path = "../rembrandt-project/libasync" }
async_cuda = { path = "../rembrandt-project/libasync_cuda" }

array_cuda = { path = "../rembrandt-project/libarray_cuda" }
array_new = { path = "../rembrandt-project/libarray_new" }
#cuda = { path = "../rembrandt-project/libcuda", features = ["cuda-7-0"] }
cuda = { path = "../rembrandt-project/libcuda" }
rembrandt = { path = "../rembrandt-project/rembrandt_new" }

arraydb = { path = "../rembrandt-project/arraydb" }
episodb = { path = "../episodb" }
hydra = { path = "../hydra" }
gsl = { path = "../libgsl" }
rng = { path = "../librng" }
#statistics_avx2 = { path = "libstatistics_avx2" }
